​modulo 2 unidad 1 modificación de pagina cv

--- a/Modulo 2/Unidad 1: "CSS (Parte 1)"/index.html
+++ b/Modulo 2/Unidad 1: "CSS (Parte 1)"/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV-Darth Vader</title>
     <link rel="stylesheet" href="Etiquetas.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
     <style> 
     body{padding-left: 17em;}
     aside{
@@ -43,11 +46,12 @@
         <a href="https://www.linkedin.com/in/darth-vader-60b483173/" target="blank" >aquí</a>
         </p>
     </aside>
-
+    <div class="caja1">
     <h1>    Darth Vader</h1>
+    </div>
     <h6 style= "color: #ff6 ; font" >  (Anakin Skywalker) </h6>
     <p></p>
-    <img src="img-Darth-Vader.jpg" alt= "Foto De Perfil Darth Vader">
+    <img src="img-Darth-Vader.jpg" alt= "Foto De Perfil Darth Vader" class="caja2">
     <p>
     <audio src= "Darth Vader.mp3" controls autoplay></audio>
    
@@ -62,9 +66,9 @@
         APosteriormente, Anakin descubre que su esposa, Padmé, está embarazada, pero comienza a tener horribles pesadillas, en las que ve como esta muere. Por otro lado, el joven jedi se acerca cada vez más al Canciller Palpatine, quien es un Sith encubierto y quien lo acabará arrastrando al lado oscuro.
         Tras su caída, adopta el nombre de Darth Vader y acaba enfrentándose a su maestro, Kenobi.
     </P>
-    <h2 style="color: #ff6; background-color: rgb(37, 35, 35);">Logros</h2>
-    <h3 style="color: #ff6; background-color: rgb(37, 35, 35)"> Estrella de la Muerte:</h3>
-    <p style="color: #ff6; background-color: rgb(37, 35, 35)">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores sunt, quas voluptates iste harum esse ipsum iusto minus architecto molestias, obcaecati quo ut, suscipit voluptatum tempora tempore corporis aliquam ullam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique illo fugit commodi natus et harum maxime, sint sunt optio eaque necessitatibus sequi quo minus nisi cum doloremque autem qui veritatis!. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto amet nemo sequi aliquid! Quos dolore quidem voluptatem corrupti deleniti impedit aliquam consequuntur maiores, reiciendis accusantium magni perspiciatis temporibus inventore non.</p>
+    <h2>Logros</h2>
+    <h3> Estrella de la Muerte:</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores sunt, quas voluptates iste harum esse ipsum iusto minus architecto molestias, obcaecati quo ut, suscipit voluptatum tempora tempore corporis aliquam ullam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique illo fugit commodi natus et harum maxime, sint sunt optio eaque necessitatibus sequi quo minus nisi cum doloremque autem qui veritatis!. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto amet nemo sequi aliquid! Quos dolore quidem voluptatem corrupti deleniti impedit aliquam consequuntur maiores, reiciendis accusantium magni perspiciatis temporibus inventore non.</p>
 
 
 </html>
