Tarea: Unidad 3 CSS (parte 3)

--- a/Modulo 2/Unidad 1_ _CSS (Parte 1)_/index.html
+++ b/Modulo 2/Unidad 1_ _CSS (Parte 1)_/index.html
@@ -15,12 +15,12 @@
         position: absolute;
         top: 2em;
         left: 1em;
-        width: 9em>
+        width: 9em;
     }
     </style>
 </head>
 <body class="listas">
-    <aside ><h2> Edad:</h2>
+    <aside><h2> Edad:</h2>
     <h4>45</h>
     <h2> Planeta de origen: </h2>
     <h4>Tatooin</h4>
@@ -49,7 +49,7 @@
     <div class="caja1">
     <h1>    Darth Vader</h1>
     </div>
-    <h6 style= "color: #ff6 ; font" >  (Anakin Skywalker) </h6>
+    <h6 style= "color: #ff6 ; font-family: Vedana">  (Anakin Skywalker) </h6>
     <p></p>
     <img src="img-Darth-Vader.jpg" alt= "Foto De Perfil Darth Vader" class="caja2">
     <p>
